Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <body>
         <img src=https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png>
         <h1>Sean Mark</h1>
-        <p>I finally figured this out and I'm very happy</p>
+        <p>add me on snap: seanymarker</p>
     </body>
 </html>
