--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <img src=https://github.com/hackclub/dinosaurs/raw/master/smart_dinosaur_docs.png>
-        <h1>Sean Mark</h1>
-        <p>add me on snap: seanymarker</p>
+        <img src=http://peopleoflancaster.com/local-farm-debut-first-organic-non-gmo-corn-maze/>
+        <h1>Hey Tori</h1>
+        <p>I decided to code this for you, I hope you had an amazing day</p>
     </body>
 </html>
