--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <img src=http://peopleoflancaster.com/local-farm-debut-first-organic-non-gmo-corn-maze/>
         <h1>Hey Tori</h1>
-        <p>I decided to code this for you, I hope you had an amazing day</p>
+        <p>dont respond to me if you're a noob</p>
     </body>
 </html>
