--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>Hey Tori</h1>
-        <p>dont respond to me if you're a noob</p>
+        <h1>yoyoyoyoyoyo waddup</h1>
+        <div class = "moveit">
+        <p>welcome to the website, hope you enjoy it, stay for a while, just
+        chill or whatever youd like</p>
+        </div>
     </body>
 </html>
