--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
-        <h1>yoyoyoyoyoyo waddup</h1>
+        <h1><marquee> yoyoyoyoyoyo waddup</marquee></h1>
         <div class = "moveit">
         <p>welcome to the website, hope you enjoy it, stay for a while, just
         chill or whatever youd like</p>
