--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <body>
         <h1><marquee> yoyoyoyoyoyo waddup</marquee></h1>
         <div class = "moveit">
-        <p>welcome to the website, hope you enjoy it, stay for a while, just
-        chill or whatever youd like</p>
+        <p>sup niggers</p>
         </div>
     </body>
 </html>
