--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <h1><marquee> yoyoyoyoyoyo waddup</marquee></h1>
         <div class = "moveit">
-        <p>sup niggers</p>
+        <p>yeaahhhhhhhhhhhhhhhhhhh boiiiiiiiiiiiiiiiiiiiiiiii</p>
         </div>
     </body>
 </html>
